# newscheck

./: LICENSE  pyproject.toml
newscheck/: __init__.py  extract.py  fetch.py  prompts.py  types.py
newscheck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
